feat: Implement complete CI/CD pipeline infrastructure
Complete CI/CD implementation with GitHub Actions for automated testing, building, and deployment across all environments.

Phase 1: Foundation
- Enhanced .gitignore with CI/CD artifact patterns
- Terraform remote state configuration (S3 + DynamoDB)
- Environment-specific backend configs (dev/prod)
- Secrets management strategy documentation

Phase 2: PR Validation
- Automated backend tests (pytest + 80% coverage)
- Frontend tests (Jest/Vitest)
- Linting (Ruff, ESLint, mypy, TypeScript)
- Security scanning (Bandit, Trivy, TruffleHog)
- Terraform validation
- Build verification

Phase 3: Backend Deployment
- Lambda deployment with blue/green strategy
- Health checks with automatic rollback
- Database migration automation
- Smoke tests for critical paths

Phase 4: Worker Lambda Deployment
- Async worker Lambda deployment
- EventBridge rule configuration
- SQS integration support

Phase 5: Frontend Deployment
- Docker builds with layer caching
- Amazon ECR image management
- App Runner deployment with health checks

Phase 6: Terraform Automation
- Plan output on PRs
- Automated apply with manual approval gates
- Environment-specific tfvars

Phase 7: Documentation
- Complete architecture diagrams
- Setup and migration guides
- Branch protection recommendations
- Secrets management best practices

Files: 25 files, 3,823 insertions
Workflows: 7 GitHub Actions workflows
Scripts: 4 CI/CD automation scripts
Docs: 5 comprehensive guides

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__/
 *.so
 .Python
 build/
+build\ */
 develop-eggs/
 dist/
 downloads/
@@ -22,6 +23,16 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+
+# Testing & Coverage
+.coverage
+.coverage.*
+htmlcov/
+.pytest_cache/
+.tox/
+coverage.xml
+*.cover
+.hypothesis/
 
 # Virtual environments
 venv/
@@ -49,11 +60,14 @@ env/
 .terraform.lock.hcl
 tfplan
 
-# Lambda packages
+# Lambda packages & build artifacts
 *.zip
 terraform/modules/lambda/lambda.zip
 terraform/modules/lambda/layers/
 lambda-worker-build/
+worker-deployment*.zip
+lambda_package/
+.aws-sam/
 
 # Node
 node_modules/
@@ -82,3 +96,15 @@ backend/apple-wallet-*.pem
 backend/*-credentials.json
 outreachpass-*.json
 *.json.terraform/
+
+# CI/CD artifacts
+.github/workflows/.env
+deployment-*.json
+artifact-*.tar.gz
+lambda-deploy-*.zip
+
+# Cache directories
+.cache/
+.mypy_cache/
+.ruff_cache/
+.eslintcache
